[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
license = {file = "LICENSE"}
# keywords = ["", ""]
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }
]
maintainers = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" }
]
dependencies = [
    "pydantic"
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest",
    "ruff"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "E",  # pycodestyle - Error
    "F",  # Pyflakes
    "I",  # isort
    "PL"  # Pylint
]
ignore = ["D203", "D213"]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
